feat: add python module built with fastapi